Rearranging structure into modules

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -44,13 +44,12 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js" integrity="sha256-WMX1oGxdlHQ+INIGXgmbExcvhBREk8bR9fSseB2qIVs=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="lib/ui-router-extras/release/ct-ui-router-extras.min.js"></script>
 <!-- Our files -->
-<script src="services/Todos.js"></script>
-<script src="services/Auth.js"></script>
-<script src="services/Notify.js"></script>
-<script src="controllers/RegisterCtrl.js"></script>
-<script src="controllers/TodoCtrl.js"></script>
-<script src="controllers/LoginCtrl.js"></script>
+
+<script src="../../public/modules/core/services/Auth.js"></script>
+<script src="../../public/modules/core/services/Notify.js"></script>
+<script src="../../public/modules/core/controllers/RegisterCtrl.js"></script>
+<script src="../../public/modules/core/controllers/LoginCtrl.js"></script>
 <!-- LAST SCRIPT IS APP.JS -->
-<script src="App.js"></script>
+<script src="modules/core/App.ts"></script>
 
 </html>
