Fixed gulp, finishing structure

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="2Q2R">
 
 <head>
-    <link href="css/main.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="modules/core/css/main.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha256-AIodEDkC8V/bHBkfyxzolUMw57jeQ9CauwhVW6YJ9CB=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" integrity="sha256-bZkavcZrFlXfus3527w/pLbvXgyqnrHbNdMpwNXf1dA=" crossorigin="anonymous" />
@@ -45,11 +45,11 @@
 <script type="text/javascript" src="lib/ui-router-extras/release/ct-ui-router-extras.min.js"></script>
 <!-- Our files -->
 
-<script src="../../public/modules/core/services/Auth.js"></script>
-<script src="../../public/modules/core/services/Notify.js"></script>
-<script src="../../public/modules/core/controllers/RegisterCtrl.js"></script>
-<script src="../../public/modules/core/controllers/LoginCtrl.js"></script>
+<script src="modules/core/services/Auth.js"></script>
+<script src="modules/core/services/Notify.js"></script>
+<script src="modules/core/controllers/RegisterCtrl.js"></script>
+<script src="modules/core/controllers/LoginCtrl.js"></script>
 <!-- LAST SCRIPT IS APP.JS -->
-<script src="modules/core/App.ts"></script>
+<script src="modules/core/App.js"></script>
 
 </html>
