--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,55 +1,70 @@
 <!DOCTYPE html>
-<html ng-app="2Q2R">
+<html ng-app="GatorTA">
 
 <head>
-    <link href="modules/core/css/main.css" rel="stylesheet" type="text/css" media="all" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
+    <base href="/">
+    <title>Be a Gator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="lib/angular-material/angular-material.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="lib/semantic/dist/semantic.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha256-AIodEDkC8V/bHBkfyxzolUMw57jeQ9CauwhVW6YJ9CB=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" integrity="sha256-bZkavcZrFlXfus3527w/pLbvXgyqnrHbNdMpwNXf1dA=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css" integrity="sha256-BQwSEeLxuDggfePeFdo3V906rcvcJpkSAYr/Lqc2oSo="
-        crossorigin="anonymous" />-->
+    <link href="css/header.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/footer.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="modules/core/css/main.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="modules/main/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="shortcut icon" href="ufavicon.png">
 </head>
 
-<body>
-    <div class="loader-ing">
-        <div class="banner" ui-sref="register" ng-cloak>
-            <img src="img/2q2r-logo-words.svg">
-        </div>
-        <div class="spacer"></div>
-        <ui-view></ui-view>
-    </div>
-    <div id="splash" ng-hide="true">
-        <img id="splash-logo" src="img/2q2r-logo-words.svg">
-    </div>
-    <!-- So people know it's us -->
-    <div class="copyright">&copy Tera Insights, LLC 2016</div>
-</body>
-<!-- Libs -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js" integrity="sha256-6Sr0HqNgUf/p88g6vsl87CrAnNqiOWhjlY6LS8jeWHA=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="lib/ng.dropdown/dist/ngDropdown.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-resource.js" integrity="sha256-JnpGTO2DIDKUzIDSkWc6u/zmHgUzCJFGFlfSuvLligA=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-messages.js" integrity="sha256-kfIryb9tL8WrfymkVZ6KkDg6qR5aDrpcWlkOZVi9EQA=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="lib/angular-validation-match/dist/angular-validation-match.min.js"></script>
-<script type="text/javascript" src="lib/qrcode/lib/qrcode.min.js"></script>
-<script type="text/javascript" src="lib/angular-qr/angular-qr.min.js"></script>
-<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js" integrity="sha256-BlYXc67JeIFZfxjseL6XCBWFi7MwxKoUEF6rPIzHmBM="
-    crossorigin="anonymous"></script>-->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js" integrity="sha256-YUCh5+Y7KLYFkfuGkmKTo2Bsm2+RHjbG7aefaPF/cBg=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.1/angular-materialize.min.js" integrity="sha256-Gj4eDejApF7RbvsodmqdIP04aLC9sjKZ7YOkTqV7khA=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="lib/ng.dropdown/dist/ngDropdown.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-aria.js" integrity="sha256-w0Abeob8ODHbOLLliDCgK7Z9ALkxdImFckzMlbMaZsw=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-animate.js" integrity="sha256-59KcG0bz2jTeDCBcEBD4bK+iHY0xYEhi1qsASkIysP0=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js" integrity="sha256-WMX1oGxdlHQ+INIGXgmbExcvhBREk8bR9fSseB2qIVs=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="lib/ui-router-extras/release/ct-ui-router-extras.min.js"></script>
-<!-- Our files -->
+<body ng-controller="MainCtrl as ctrl" style="overflow-y:hidden">
+    <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="lib/angularjs/angular.js"></script>
+    <script type="text/javascript" src="lib/angular-resource/angular-resource.js"></script>
+    <script type="text/javascript" src="lib/angular-sanitize/angular-sanitize.js"></script>
+    <script type="text/javascript" src="lib/angular-aria/angular-aria.js"></script>
+    <script type="text/javascript" src="lib/angular-animate/angular-animate.js"></script>
+    <script type="text/javascript" src="lib/angular-material/angular-material.js"></script>
+    <script type="text/javascript" src="lib/semantic/dist/semantic.min.js"></script>
+    <script type="text/javascript" src="lib/asmcrypto/asmcrypto.js"></script>
+    <script type="text/javascript" src="lib/filesaver/FileSaver.min.js"></script>
 
-<script src="modules/core/services/Auth.js"></script>
-<script src="modules/core/services/Notify.js"></script>
-<script src="modules/core/controllers/RegisterCtrl.js"></script>
-<script src="modules/core/controllers/LoginCtrl.js"></script>
-<!-- LAST SCRIPT IS APP.JS -->
-<script src="modules/core/App.js"></script>
+    <div class="admin-container" ng-include="'modules/main/views/main.html'"></div>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js" integrity="sha256-6Sr0HqNgUf/p88g6vsl87CrAnNqiOWhjlY6LS8jeWHA=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="lib/ng.dropdown/dist/ngDropdown.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-resource.js" integrity="sha256-JnpGTO2DIDKUzIDSkWc6u/zmHgUzCJFGFlfSuvLligA=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-messages.js" integrity="sha256-kfIryb9tL8WrfymkVZ6KkDg6qR5aDrpcWlkOZVi9EQA=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="lib/angular-validation-match/dist/angular-validation-match.min.js"></script>
+    <script type="text/javascript" src="lib/qrcode/lib/qrcode.min.js"></script>
+    <script type="text/javascript" src="lib/angular-qr/angular-qr.min.js"></script>
+    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js" integrity="sha256-BlYXc67JeIFZfxjseL6XCBWFi7MwxKoUEF6rPIzHmBM="
+    crossorigin="anonymous"></script>-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js" integrity="sha256-YUCh5+Y7KLYFkfuGkmKTo2Bsm2+RHjbG7aefaPF/cBg=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.1/angular-materialize.min.js" integrity="sha256-Gj4eDejApF7RbvsodmqdIP04aLC9sjKZ7YOkTqV7khA=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="lib/ng.dropdown/dist/ngDropdown.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-aria.js" integrity="sha256-w0Abeob8ODHbOLLliDCgK7Z9ALkxdImFckzMlbMaZsw=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-animate.js" integrity="sha256-59KcG0bz2jTeDCBcEBD4bK+iHY0xYEhi1qsASkIysP0=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js" integrity="sha256-WMX1oGxdlHQ+INIGXgmbExcvhBREk8bR9fSseB2qIVs=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="lib/ui-router-extras/release/ct-ui-router-extras.min.js"></script>
+
+
+    <script type="text/javascript" src="modules/core/services/Users.js"></script>
+    <script type="text/javascript" src="modules/core/services/Auth.js"></script>
+    <script type="text/javascript" src="modules/core/services/Notify.js"></script>
+    <script type="text/javascript" src="modules/core/services/Semesters.js"></script>
+    <script type="text/javascript" src="modules/core/services/StudentProfile.js"></script>
+    <script type="text/javascript" src="modules/core/controllers/LoginCtrl.js"></script>
+    <!-- Keep this entry last -->
+    <script type="text/javascript" src="modules/core/Core.js"></script>
+    <script type="text/javascript" src="modules/admin/admin.js"></script>
+    <script type="text/javascript" src="modules/student/student.js"></script>
+
+    <script type="text/javascript" src="modules/main/controllers/MainCtrl.js"></script>
+    <!-- Keep this entry last -->
+    <script type="text/javascript" src="modules/main/MainApp.js"></script>
+</body>
 
 </html>
