--- a/src/public/modules/admin/admin.html
+++ b/src/public/modules/admin/admin.html
@@ -69,6 +69,7 @@
     <script type="text/javascript" src="modules/core/services/Users.js"></script>
     <script type="text/javascript" src="modules/core/services/Semesters.js"></script>
     <script type="text/javascript" src="modules/core/services/Courses.js"></script>
+    <script type="text/javascript" src="modules/core/services/CourseSections.js"></script>
     <script type="text/javascript" src="modules/core/controllers/LoginCtrl.js"></script>
     <script type="text/javascript" src="modules/core/controllers/RegisterCtrl.js"></script>
     <script type="text/javascript" src="modules/admin/controllers/AdminCtrl.js"></script>
