--- a/src/public/modules/admin/admin.html
+++ b/src/public/modules/admin/admin.html
@@ -70,6 +70,8 @@
     <script type="text/javascript" src="modules/core/services/Semesters.js"></script>
     <script type="text/javascript" src="modules/core/services/Courses.js"></script>
     <script type="text/javascript" src="modules/core/services/CourseSections.js"></script>
+    <script type="text/javascript" src="modules/core/services/Recommendations.js"></script>
+    <script type="text/javascript" src="modules/core/services/StudentProfile.js"></script>
     <script type="text/javascript" src="modules/core/controllers/LoginCtrl.js"></script>
     <script type="text/javascript" src="modules/core/controllers/RegisterCtrl.js"></script>
     <script type="text/javascript" src="modules/admin/controllers/AdminCtrl.js"></script>
@@ -80,6 +82,9 @@
     <script type="text/javascript" src="modules/admin/controllers/AddFacultyCtrl.js"></script>
     <script type="text/javascript" src="modules/admin/controllers/StudentsCtrl.js"></script>
     <script type="text/javascript" src="modules/admin/controllers/AddStudentsCtrl.js"></script>
+    <script type="text/javascript" src="modules/admin/controllers/TAManagementCtrl.js"></script>
+    <script type="text/javascript" src="modules/admin/controllers/StudentDetailCtrl.js"></script>
+    <script type="text/javascript" src="modules/admin/controllers/ConfirmationMsg.js"></script>
     <script type="text/javascript" src="modules/admin/controllers/CoursesCtrl.js"></script>
     <script type="text/javascript" src="modules/core/Core.js"></script>
 
